--- a/LabRnd/App.config
+++ b/LabRnd/App.config
@@ -12,11 +12,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="RNDDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-N74HQOK;initial catalog=RNDDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="LabRnd.Properties.Settings.RNDDBConnectionString"
-      connectionString="Data Source=DESKTOP-N74HQOK;Initial Catalog=RNDDB;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="RNDDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-N74HQOK;initial catalog=RNDDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
